   - re-work to:rescanMaxLabel to improve which labels cause taller cells in useTracker

28 jan 2016
   - delete tracker row from toplevel in tlist.deleteTrackerAllRow() : old callers (delTracker and orphans code) all did reloadFromTLT() after delete, fix problem new demo tracker not wiping old
   - add one-time alert to say 'enable notifications for reminders' before requesting to enable notifications on startup
   - add alert when reminder enabled if notifications disabled
   - add bundle display name, version and build to database info

--- commit ---

   - archived rTracker 2.0.8 5944
   - archived rTrackerA 2.0.8 5708

08 feb 2016
   - oops looks like crashes on iOS 8 at least according to simulator, due to shortcut items
   -- added check and avoid
   - user Hakan Durgat reports display bug for trackers with only choice or slider entries -- due to rescanMaxLabel skipping these; changed to always get height value

22 feb 2016
   - oops!  25 jan 2016 change to make delta, ratios consistent >= start date broke those functions because needed to change desc->asc -- fixed


* try application loader for app submission - xcode -> open developer tool -> application loader
 - in organizer window, choose 'export' after creating archive, then ... for app store deployment
 
todo: make csv split date and time columns so excel can handle — need to read in old version 
todo: handle / in tracker name 

todo: replace all export gui stuff with share menu and maybe airdrop
todo: fix bug in graph display for fn:lines at start of data -- e.g. air consumption tracker
todo: add 'no graph' as graph type and lose 'draw graph' checkbox

+++ check rvc viewDidAppear / restart behaviour with adversion changes

+ work through fonts, probably use PrefBodyFont more
+ check mail func as changing present view controller calls (ios6)

+ add -[n] entries thing
+ add entry_count as a fn piece -- count of entries over range, so avg could be sum()/entry_count



