@@ -59,10 +59,16 @@
 #define FN1ARGCOUNT		(FN1ARGMAX-1)
 #define FN1ARGONRATIO   (FN1ARGCOUNT-1)
 #define FN1ARGNORATIO   (FN1ARGONRATIO-1)
+#define FN1ARGELAPSEDWEEKS (FN1ARGNORATIO-1)
+#define FN1ARGELAPSEDDAYS  (FN1ARGELAPSEDWEEKS-1)
+#define FN1ARGELAPSEDHOURS (FN1ARGELAPSEDDAYS-1)
+#define FN1ARGELAPSEDMINS  (FN1ARGELAPSEDHOURS-1)
+#define FN1ARGELAPSEDSECS  (FN1ARGELAPSEDMINS-1)
 
 #define FNNEW1ARGLAST   FNNEW1ARGFIRST-100
 
 #define isFn1Arg(i)		(((i<=FN1ARGFIRST) && (i>=FN1ARGLAST)) || ((i<=FNNEW1ARGFIRST) && (i>=FNNEW1ARGLAST)))
+#define isFn1ArgElapsed(i) ((i<=FN1ARGELAPSEDWEEKS) && (i>=FN1ARGELAPSEDSECS))
 
 #define FNNEW2ARGFIRST  FNNEW1ARGLAST-10
 #define FNNEW2ARGLAST   FNNEW2ARGFIRST-100
@@ -84,9 +90,9 @@
 #define FNCONSTANT_TITLE @"constant"
 
 
-#define ARG1FNS FN1ARGDELTA,FN1ARGSUM,FN1ARGPOSTSUM,FN1ARGPRESUM,FN1ARGAVG,FN1ARGMIN,FN1ARGMAX,FN1ARGCOUNT,FN1ARGONRATIO,FN1ARGNORATIO
-#define ARG1STRS @"change_in", @"sum", @"post-sum", @"pre-sum", @"avg", @"min", @"max", @"count", @"old/new", @"new/old"
-#define ARG1CNT 10
+#define ARG1FNS FN1ARGDELTA,FN1ARGSUM,FN1ARGPOSTSUM,FN1ARGPRESUM,FN1ARGAVG,FN1ARGMIN,FN1ARGMAX,FN1ARGCOUNT,FN1ARGONRATIO,FN1ARGNORATIO,FN1ARGELAPSEDWEEKS,FN1ARGELAPSEDDAYS,FN1ARGELAPSEDHOURS,FN1ARGELAPSEDMINS,FN1ARGELAPSEDSECS
+#define ARG1STRS @"change_in", @"sum", @"post-sum", @"pre-sum", @"avg", @"min", @"max", @"count", @"old/new", @"new/old", @"elapsed_weeks", @"elapsed_days", @"elapsed_hrs", @"elapsed_mins", @"elapsed_secs"
+#define ARG1CNT 15
 
 #define ARG2FNS FN2ARGPLUS,FN2ARGMINUS,FN2ARGTIMES,FN2ARGDIVIDE
 #define ARG2STRS @"+", @"-", @"*", @"/"
